# stellabook

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml
.claude/: settings.json
.claude/rules/: python.md
src/stellabook/: __init__.py  arxiv_client.py  config.py  fastapi_app.py  figure_extractor.py  generator.py  models.py  notebook_builder.py  notebook_models.py  observability.py  pdf.py
tests/: conftest.py  test_arxiv_client.py  test_fastapi_app.py  test_figure_extractor.py  test_generator.py  test_notebook_builder.py  test_pdf.py
