[project]
name = "stellabook"
version = "0.1.0"
description = "Retrieve arXiv papers and generate interactive Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic>=2.0",
    "fastapi",
    "uvicorn[standard]",
    "defusedxml",
    "anthropic>=0.39",
    "nbformat>=5.10",
    "black",
    "pymupdf",
]

[project.scripts]
stellabook-api = "stellabook.fastapi_app:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "ruff",
    "mypy",
    "types-defusedxml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stellabook"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
