[project]
name = "stellabook"
version = "0.1.0"
description = "Retrieve arXiv papers and generate interactive Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic>=2.0",
    "fastapi",
    "uvicorn[standard]",
    "defusedxml",
    "python-dotenv>=1.0",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.1",
    "nbformat>=5.10",
    "black",
    "pymupdf",
    "logfire[fastapi]",
]

[project.scripts]
stellabook-api = "stellabook.fastapi_app:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "ruff",
    "pyright",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stellabook"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
